--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SeDuMi"
 uuid = "a895aaad-f784-5544-9392-bb281339c1b2"
 repo = "https://github.com/jump-dev/SeDuMi.jl.git"
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -10,8 +10,8 @@ MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 
 [compat]
-MATLAB = "≥ 0.7.3"
-MathOptInterface = "0.9"
+MATLAB = "0.7.3"
+MathOptInterface = "0.9.12"
 julia = "1"
 
 [extras]
