--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: matlab-actions/setup-matlab@v2
         with:
-          release: R2024a
+          release: R2021b
       - shell: bash
         run: |
           wget https://github.com/sqlp/sedumi/releases/download/v1.3.8/sedumi.tgz
