--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           echo "LD_LIBRARY_PATH=$MATLAB_ROOT/bin/glnxa64:$LD_LIBRARY_PATH" >> $GITHUB_ENV
       - shell: julia --color=yes {0}
         run: |
+          import Libdl
           const libeng = Ref{Ptr{Cvoid}}()
           const eng_open = Ref{Ptr{Cvoid}}()
           libeng_path = joinpath(ENV["MATLAB_ROOT"], "bin", "glnxa64", "libeng")
